--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
 
     
 </head>
@@ -61,7 +64,12 @@
 
     <div>
         <div class="header-home">
-        <img class="header-img" src="Images/New Photos/140 Elm - skidsteer.png" >
+        <!-- The video -->
+        <video autoplay muted loop id="myVideo">
+          <source src="Video/WebBanner_1.mp4" type="video/mp4">
+         </video>
+           
+        <!--<img class="header-img" src="Images/New Photos/140 Elm - skidsteer.png" >-->
     </div>
         <div class="header-container slide-up">
         <div>
@@ -74,12 +82,12 @@
 
     <br>
     <div class="header-font inline" style="z-index: 4;">
-        <h4>BUILDING ENVELOPE & BALCONY REPAIRS PARKING STRUCTURE RESTORATION WATERPROOFING </h4>  
+        <h4>BUILDING ENVELOPE & BALCONY REPAIRS &#11049 PARKING STRUCTURE RESTORATION &#11049 WATERPROOFING </h4>  
     </div>
     <br>
     <div class="header-font inline" style="z-index: 4;">
 
-    <h4>HYDRODEMOLITION ASPHALT & CONCRETE PAVING WINDOW & DOOR REPLACEMENT</h4>
+    <h4>HYDRODEMOLITION &#11049 ASPHALT & CONCRETE PAVING &#11049 WINDOW & DOOR REPLACEMENT</h4>
     </div>
 
 </div>
