--- a/Contact.html
+++ b/Contact.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="shortcut icon" href="Images/Logos/CM.png">
+
     
 </head>
 
@@ -45,7 +47,7 @@
                       <li><a href="Services.html">SOLUTIONS</a></li>
                       <li><a href="Projects.html">PROJECTS</a></li>
                       <li><a href="Safety.html">HEALTH & SAFETY</a></li>
-                      <li><a href="#">GOVERNENCE & ENVIRONMENT</a></li>
+                      <li><a href="ESG.html">CORPORATE RESPONSIBILITY</a></li>
                       <li><a href="Contact.html">CONTACT</a></li>
                   </ul>
               </nav>               
@@ -61,26 +63,26 @@
 
         <div class="flex-container">
             <div class="flex-row">
-              <div class="col-left"><p class="contact-text">Address</p></div>
+              <div class="col-left"><p class="contact-text bold">Address</p></div>
               
               <div class="col-right"><p class="contact-text">35 City View Drive<br>
             Toronto, Ontario <br>
             M9W 5A5<br><br>21 Oceanview School Road<br>Eastern Passage, Nova Scotia<br>B3G 1J3</p></div>
             </div>
             <div class="flex-row">
-              <div class="col-right"><p class="contact-text">Email</p></div>
+              <div class="col-right"><p class="contact-text bold">Email</p></div>
               <div class="col-left"><p class="contact-text">sales@canmarcontracting.com</p></div>
             </div>
             <div class="flex-row">
-              <div class="col-left"><p class="contact-text">Telephone</p></div>
+              <div class="col-left"><p class="contact-text bold">Telephone</p></div>
               <div class="col-right"><p class="contact-text">Toronto Office: (416) 674-8791 <br>Halifax Office: (902) 418-1010</p></div>
             </div>
             <div class="flex-row">
-              <div class="col-right"><p class="contact-text">Fax (Toronto)</p></div>
+              <div class="col-right"><p class="contact-text bold">Fax (Toronto)</p></div>
               <div class="col-left"><p class="contact-text">(416) 674-7956</p></div>
             </div>
             <div class="flex-row">
-              <div class="col-left"><p class="contact-text">Social Media</p></div>
+              <div class="col-left"><p class="contact-text bold">Social Media</p></div>
               <div class="col-right">        <div class="social-icons-contact">
                 <img src="Images/instagram.webp">
                 <img src="Images/734399_facebook_media_online_social_icon.png" style="height: 61px; width: 61px; padding-left: 10px">
