--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="Images/Logos/CM.png">
 
 
 
@@ -50,7 +51,7 @@
                         <li><a href="Services.html">SOLUTIONS</a></li>
                         <li><a href="Projects.html">PROJECTS</a></li>
                         <li><a href="Safety.html">HEALTH & SAFETY</a></li>
-                        <li><a href="#">GOVERNENCE & ENVIRONMENT</a></li>
+                        <li><a href="ESG.html">CORPORATE RESPONSIBILITY</a></li>
                         <li><a href="Contact.html">CONTACT</a></li>
                     </ul>
                 </nav>               
@@ -62,11 +63,10 @@
     </div>
 
 
-    <div>
         <div class="header-home">
         <!-- The video -->
         <video autoplay muted loop id="myVideo">
-          <source src="Video/WebBanner_1.mp4" type="video/mp4">
+          <source src="Video/final.mp4" type="video/mp4">
          </video>
            
         <!--<img class="header-img" src="Images/New Photos/140 Elm - skidsteer.png" >-->
@@ -81,11 +81,11 @@
 </div>
 
     <br>
-    <div class="header-font inline" style="z-index: 4;">
+    <div class="header-font inline sub" style="z-index: 4;">
         <h4>BUILDING ENVELOPE & BALCONY REPAIRS &#11049 PARKING STRUCTURE RESTORATION &#11049 WATERPROOFING </h4>  
     </div>
     <br>
-    <div class="header-font inline" style="z-index: 4;">
+    <div class="header-font inline sub" style="z-index: 4;">
 
     <h4>HYDRODEMOLITION &#11049 ASPHALT & CONCRETE PAVING &#11049 WINDOW & DOOR REPLACEMENT</h4>
     </div>
@@ -93,7 +93,6 @@
 </div>
     <br>
     </header>
-    </div>
 
 
     <div class="home-container">
@@ -108,16 +107,19 @@
 
           <div class="text">
             <h2 class="home-text">Our Mission</h2>
-            <p class="home-text">Our mission is to ensure that all projects are planned and executed safely on time, on budget, and with a high level of quality control. Through an empowered team of experienced, motivated employees, striving to exceed our clients’ expectations we lead the construction process. CanMar values safety, integrity, innovation, teamwork, open communication and commitment. 
-                </p> <p class="home-text" style="font-weight: bold;">+</p>
+            <p class="home-text special-text">Our mission is to ensure that all projects are planned and executed safely on time, on budget, and with a high level of quality control. Through an empowered team of experienced, motivated employees, striving to exceed our clients’ expectations we lead the construction process. CanMar values safety, integrity, innovation, teamwork, open communication and commitment. 
+              We are an innovative restoration company with a focus on ongoing research and implementation of new technologies in construction materials to ensure restoration is performed to the highest standards while minimizing the impact on the environment. 
+              
+              Our service goal is fueled by team dedication to continuously improve knowledge and techniques about building restoration. We are committed to ensuring that we deliver on quality projects that restore building integrity and provide added value to our Clients.
+                </p> <p class="home-text expand-button" style="font-weight: bold;">+</p>
           </div>
         </div>
         <div class="item slide-up">
           <img src="Images/New Photos/5brookbanks-chipper.jpeg" alt="Image">
           <div class="text">
             <h2 class="home-text">Our Vision</h2>
-            <p class="home-text">Our vision is to be a dynamic construction services company by fostering rewarding careers for our employees, providing reliable quality and exceptional service to our customers while constantly pursuing excellence.
-             </p> <p class="home-text" style="font-weight: bold;">+</p>
+            <p class="home-text special-text-2">Our vision is to be a dynamic construction services company by fostering rewarding careers for our employees, providing reliable quality and exceptional service to our customers while constantly pursuing excellence. With every project we undertake, we do so with the understanding that we have the vision, knowledge, skills and ability to generate innovative solutions that consistently exceed client expectations. We have earned a reputation for completing a variety of significant projects, on time and on budget, while maintaining our corporate philosophy of professionalism, integrity, and collaboration.
+             </p> <p class="home-text expand-button-2" style="font-weight: bold;">+</p>
           </div>
         </div>
         <div class="item slide-up">
