--- a/Safety.html
+++ b/Safety.html
@@ -29,7 +29,7 @@
             <div class="navbar-container">
 
                 <div class="menu-header">
-                    <span class="menu-header-text">Health & Safety</span>
+                    <span class="menu-header-text safety-small" >Health & Safety</span>
                   </div>
     
 
