--- a/About.html
+++ b/About.html
@@ -71,7 +71,7 @@
 
 
             </p></div>
-            <div style="margin-left:0;"><img src="Images/Logos/25year"></div>
+            <div style="margin-left:0;"><img style="max-width: 83vw;" src="Images/Logos/25year"></div>
             </div>
 
             <div><img style="width: 100%; height: auto;" src="Images/Office/Team.jpg"> </div>
