--- a/Projects.html
+++ b/Projects.html
@@ -29,7 +29,7 @@
             <div class="navbar-container">
 
                 <div class="menu-header">
-                    <span class="menu-header-text">Projects</span>
+                    <!--<span class="menu-header-text">Projects</span> -->
                   </div>
     
 
@@ -43,9 +43,9 @@
                   <nav class="menu" id="menu">
                     <ul>
                         <li><a href="index.html">HOME</a></li>
-                        <li><a href="About.html">ABOUT</a></li>
+                        <li><a href="About.html">ABOUT US</a></li>
                         <li><a href="Services.html">SOLUTIONS</a></li>
-                        <li><a href="Projects.html">PROJECTS</a></li>
+                        <li><a href="Projects.html">FEATURE PROJECTS</a></li>
                         <li><a href="Safety.html">HEALTH & SAFETY</a></li>
                         <li><a href="ESG.html">CORPORATE RESPONSIBILITY</a></li>
                         <li><a href="Contact.html">CONTACT</a></li>
@@ -57,6 +57,8 @@
         </div> 
     </header>
     </div>
+    <div class="esgBanner"><img src="Images/New Photos/GosfordAerial.jpg"> <div class="esgOverlay"> <h2>Feature Projects</h2></div></div>
+
     <div class="content-space"></div>
     <div class="photo-grid-container">
     <div class="photo-grid">
