--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="navbar-container">
 
                 <div class="menu-header">
-                    <span class="menu-header-text">Home</span>
+                    <!--<span class="menu-header-text">Home</span> -->
                   </div>
     
 
@@ -47,9 +47,9 @@
                   <nav class="menu" id="menu">
                     <ul>
                         <li><a href="index.html">HOME</a></li>
-                        <li><a href="About.html">ABOUT</a></li>
+                        <li><a href="About.html">ABOUT US</a></li>
                         <li><a href="Services.html">SOLUTIONS</a></li>
-                        <li><a href="Projects.html">PROJECTS</a></li>
+                        <li><a href="Projects.html">FEATURE PROJECTS</a></li>
                         <li><a href="Safety.html">HEALTH & SAFETY</a></li>
                         <li><a href="ESG.html">CORPORATE RESPONSIBILITY</a></li>
                         <li><a href="Contact.html">CONTACT</a></li>
@@ -107,19 +107,17 @@
 
           <div class="text">
             <h2 class="home-text">Our Mission</h2>
-            <p class="home-text special-text">Our mission is to ensure that all projects are planned and executed safely on time, on budget, and with a high level of quality control. Through an empowered team of experienced, motivated employees, striving to exceed our clients’ expectations we lead the construction process. CanMar values safety, integrity, innovation, teamwork, open communication and commitment. 
-              We are an innovative restoration company with a focus on ongoing research and implementation of new technologies in construction materials to ensure restoration is performed to the highest standards while minimizing the impact on the environment. 
-              
-              Our service goal is fueled by team dedication to continuously improve knowledge and techniques about building restoration. We are committed to ensuring that we deliver on quality projects that restore building integrity and provide added value to our Clients.
-                </p> <p class="home-text expand-button" style="font-weight: bold;">+</p>
+            <p class="home-text">Our mission is to ensure that all projects are planned and executed safely on time, on budget, and with a high level of quality control. Through an empowered team of experienced, motivated employees, striving to exceed our clients’ expectations we lead the construction process. 
+              We are committed to ensuring that we deliver on quality projects that restore building integrity and provide added value to our Clients.
+                </p> 
           </div>
         </div>
         <div class="item slide-up">
           <img src="Images/New Photos/5brookbanks-chipper.jpeg" alt="Image">
           <div class="text">
             <h2 class="home-text">Our Vision</h2>
-            <p class="home-text special-text-2">Our vision is to be a dynamic construction services company by fostering rewarding careers for our employees, providing reliable quality and exceptional service to our customers while constantly pursuing excellence. With every project we undertake, we do so with the understanding that we have the vision, knowledge, skills and ability to generate innovative solutions that consistently exceed client expectations. We have earned a reputation for completing a variety of significant projects, on time and on budget, while maintaining our corporate philosophy of professionalism, integrity, and collaboration.
-             </p> <p class="home-text expand-button-2" style="font-weight: bold;">+</p>
+            <p class="home-text">Our vision is to be a dynamic construction services company by fostering rewarding careers for our employees, providing reliable quality and exceptional service to our customers while constantly pursuing excellence. 
+             </p> 
           </div>
         </div>
         <div class="item slide-up">
@@ -127,8 +125,8 @@
 
           <div class="text">
             <h2 class="home-text">Our Core Values</h2>
-            <p class="home-text">   These are our values that we live by:</p><br>
-            <ul>
+            <p class="home-text">   These are our values that we live by:</p>
+            <ul style="text-align: left;">
                 <li>Safety - Zero accidents through best practices</li>
                 <li>Quality - Continuous measurements and improvement</li>
                 <li>Integrity - Ethical, honest, consistent, highly regarded</li>
