--- a/About.html
+++ b/About.html
@@ -80,7 +80,7 @@
             
 
 
-            <div class="slide-up"><h2 style="font-weight:bold; margin-left: 8.3%; margin-right: 8.3%;">Our Associations</h2><p style="font-size: 20px; margin-left: 8.3%; margin-right: 8.3%;">
+            <div class="slide-up"><h2 style="font-weight:bold; margin-left: 8.3%; margin-right: 8.3%;">Our Associations</h2><p style= "text-align: justify; font-size: 20px; margin-left: 8.3%; margin-right: 8.3%;">
                 CanMar is affiliated with numerous industry associations that help us experience and explore new ideas, meet new people, and keep up to date with new industry standards.
                 </p>
 
