--- a/ESG.html
+++ b/ESG.html
@@ -64,7 +64,7 @@
 
     <div class="slide-up esgText">        <h2>Environmental, Social, Governance</h2>
         </div>
-    <div class="esgFlex slide-up">
+    <div class="esgFlex slide-up esgText">
 
         <div> <h4>Environmental</h4>
             <hr>
