--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="item slide-up">
-            <img src="Images/New Photos/final parking.png" alt="Image">
+            <img src="Images/Office/CanMar_office02.jpg" alt="Image">
 
           <div class="text">
             <h2 class="home-text">Our Mission</h2>
@@ -113,7 +113,7 @@
           </div>
         </div>
         <div class="item slide-up">
-          <img src="Images/New Photos/5brookbanks-chipper.jpeg" alt="Image">
+          <img src="Images/Office/CanMar_office03.jpg" alt="Image">
           <div class="text">
             <h2 class="home-text">Our Vision</h2>
             <p class="home-text">Our vision is to be a dynamic construction services company by fostering rewarding careers for our employees, providing reliable quality and exceptional service to our customers while constantly pursuing excellence. 
@@ -121,16 +121,16 @@
           </div>
         </div>
         <div class="item slide-up">
-            <img src="Images/New Photos/Worker walking.png" alt="Image">
+            <img src="Images/Office/CanMar_office11.jpg" alt="Image">
 
           <div class="text">
             <h2 class="home-text">Our Core Values</h2>
             <p class="home-text">   These are our values that we live by:</p>
-            <ul style="text-align: left;">
+            <ul>
                 <li>Safety - Zero accidents through best practices</li>
                 <li>Quality - Continuous measurements and improvement</li>
                 <li>Integrity - Ethical, honest, consistent, highly regarded</li>
-                <li>Sustainability - Balancing People, Planet, and Profit</li>
+                <li>Sustainability - balancing people, planet, and profit</li>
                 <li>Success - Client and employee satisfaction</li>
             </ul>
           </div>
