--- a/Safety.html
+++ b/Safety.html
@@ -62,6 +62,40 @@
 
     <div class="content-space"></div>
 
+
+    <div class="esgText slide-up">
+
+        <div><h2 style="font-weight:bold;">We are COR&trade; Certified!</h2>
+        <p>Certificate of Recognition (COR&trade;) is a comprehensive health and safety audit tool with an accredited certification program in Ontario that is granted by the Infrastructure Health and Safety Association (IHSA). IHSA is the designated body for certifying contractors in Ontario's construction industry who demonstrate their standards of health and safety management systems through a structured audit process. COR™ provides validation that a contractor has demonstrated an understanding of health and safety and has made a commitment to continuous monitoring and application of its program when delivering construction activities. </p>
+        <br>
+        <p>The key value of COR&trade; is that not only are health and safety programs reviewed to ensure that they are comprehensive, but that it will drive the need for integrating safety into the overall business process and planning of each contractor around how they conduct business on behalf of the City of Toronto. </p>
+    
+    </div>
+
+</div>
+
+<div class="cor slide-up"><img class="cor" src="Images/logo-COR.jpg"></div>
+
+
+<div class="content-space"></div>
+
+<div class="esgText slide-up">
+
+    <div><h2 style="font-weight:bold;">CanMar is a proud member of the League of Champtions!</h2>
+    <p>The League of Champions (LOC) is a cross-sectoral organization dedicated to health and safety excellence through collaboration and information sharing on real-world health and safety situations. </p>
+    <br>
+    <p>Together with our members and patrons, the LOC develops industry-leading best practices with a solutions-oriented focus on actual experiences. </p>
+
+</div>
+
+</div>
+
+<div class="safetyLoc"><div><img class="LocImg" src="Images/Logos/LOC-2.jpg"></div><div><img class="LocImg" src="Images/Safety/LOCpic.jpg"></div></div>
+
+
+    <div class="content-space"></div>
+
+
     
     <div class="safety-grid slide-up">
 
@@ -85,6 +119,8 @@
     </div>
 
     <div class="content-space"></div>
+
+
 
     <div class="safety-grid">
 
@@ -158,7 +194,6 @@
 
     <div class="content-space"></div>
 
-    <div class="cor slide-up"><img src="Images/logo-COR.jpg"></div>
 
 
 
