--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <video autoplay muted loop id="myVideo">
           <source src="Video/final.mp4" type="video/mp4">
          </video>
+         <img id="myImage" src="Images/New Photos/140 Elm - skidsteer.png" alt="Mobile Image">
            
         <!--<img class="header-img" src="Images/New Photos/140 Elm - skidsteer.png" >-->
     </div>
@@ -80,7 +81,7 @@
     <hr class="home-rule">
 </div>
 
-    <br>
+    <br class="home-br">
     <div class="header-font inline sub" style="z-index: 4;">
         <h4>BUILDING ENVELOPE & BALCONY REPAIRS &#11049 PARKING STRUCTURE RESTORATION &#11049 WATERPROOFING </h4>  
     </div>
