--- a/Services.html
+++ b/Services.html
@@ -67,7 +67,7 @@
     </div>
     <div class="photo-grid-container">
     <div class="photo-grid">
-        <div class="slide-up image"> <figure><img class="service-image" src="Images/Services/Hydrodemo.jpg"> <figcaption>Hydrodemolition</figcaption></figure>
+        <div class="slide-up image" ontouchstart="this.classList.add('touch-hover')" ontouchend="this.classList.remove('touch-hover')"> <figure><img class="service-image" src="Images/Services/Hydrodemo.jpg"> <figcaption>Hydrodemolition</figcaption></figure>
         <p style="font-size: 20px; width: 90%; text-align: justify; font-weight: 400;"> Regular concrete breakers can damage rebar and produce vibration that generates microfractures in sound concrete. High-pressure water jets in Hydro Demolition Equipment attack fissures in faulty concrete, preserving sound concrete and leaving it with an excellent texture for new bonding. Robotic systems make water jetting even more productive.</p>
         </div>
        
