--- a/About.html
+++ b/About.html
@@ -103,14 +103,14 @@
     <div class="aboutText"><p>CanMar is pleased to announce recent memberships with the following organizations:</p></div>
     <br>
 
-    <div class="about-grid new slide up"><img style="max-width: 83vw; padding-bottom: 10px;" src="Images/Logos/ACMO.png"><p class="aboutIntro" style="max-width: 800px;">
+    <div class="about-grid new slide up"><img class="horiz-logo" style= "padding-bottom: 10px;" src="Images/Logos/ACMOAssociateMemberLogoColour.jpg"><p class="aboutIntro" style="max-width: 800px;">
         The Association of Condominium Managers of Ontario, is the only professional industry association in Ontario dedicated to supporting, educating, and promoting condominium managers and management firms.
     
      </p>
     </div>
     <br>
 
-     <div class="about-grid new slide-up"><img src="Images/Logos/SWA.png"><p class="aboutIntro" style="max-width: 800px;">
+     <div class="about-grid new slide-up"><img src="Images/Logos/SWA-logo.png"><p class="aboutIntro" style="max-width: 800px;">
         The Sealant and Waterproofing Association provides education, leadership, and networking opportunities to establish and promote the best practices for our members and the industry.
     
      </p></div>
@@ -222,6 +222,8 @@
         <div class="social-icons">
         <img src="Images/instagram.webp">
         <img src="Images/734399_facebook_media_online_social_icon.png" style="height: 61px; width: 61px; padding-left: 10px">
+        <img src="Images/linkedin-4-512.png" style="height: 61px; width: 61px; padding-left: 10px">
+
 
     </div>
 
