--- a/ESG.html
+++ b/ESG.html
@@ -179,6 +179,8 @@
         <div class="social-icons">
         <img src="Images/instagram.webp">
         <img src="Images/734399_facebook_media_online_social_icon.png" style="height: 61px; width: 61px; padding-left: 10px">
+        <img src="Images/linkedin-4-512.png" style="height: 61px; width: 61px; padding-left: 10px">
+
 
     </div>
 
