--- a/Safety.html
+++ b/Safety.html
@@ -90,7 +90,7 @@
 
 </div>
 
-<div class="safetyLoc"><div><img class="LocImg" src="Images/Logos/LOC-2.jpg"></div><div><img class="LocImg" src="Images/Safety/LOCpic.jpg"></div></div>
+<div class="safetyLoc slide-up"><div><img class="LocImg" src="Images/Logos/LOC-2.jpg"></div><div><img class="LocImg" src="Images/Safety/LOCpic.jpg"></div></div>
 
 
     <div class="content-space"></div>
@@ -227,6 +227,8 @@
         <div class="social-icons">
         <img src="Images/instagram.webp">
         <img src="Images/734399_facebook_media_online_social_icon.png" style="height: 61px; width: 61px; padding-left: 10px">
+        <img src="Images/linkedin-4-512.png" style="height: 61px; width: 61px; padding-left: 10px">
+
 
     </div>
 
