--- a/Services.html
+++ b/Services.html
@@ -115,7 +115,7 @@
     <div class="photo-grid-service">
 
 
-        <div class="slide-up"> <figure ><img class="service-image"  src="Images/Image-Coming-Soon.png"> <figcaption>Precast Panel Repairs</figcaption></figure>
+        <div class="slide-up"> <figure ><img class="service-image"  src="Images/Services/Precast.JPG"> <figcaption>Precast Panel Repairs</figcaption></figure>
             </div>
             <div class="slide-up"> <figure ><img class="service-image"  src="Images/Services/Caulking.jpg"> <figcaption>Caulking Application</figcaption></figure>
                 </div>
