--- a/Safety.html
+++ b/Safety.html
@@ -182,9 +182,10 @@
 
 
         <div class="slide-up strip">
-            <a href="https://www.instagram.com/canmar_contracting/?igshid=MzRlODBiNWFlZA%3D%3D" target="_blank" rel="noopener noreferrer"><img src="Images/instagram.webp" alt="instagram icon"></a>
-            <a href="https://www.facebook.com/profile.php?id=100093069589695" target="_blank" rel="noopener noreferrer"><img src="Images/734399_facebook_media_online_social_icon.png" style="height: 61px; width: 61px; padding-left: 10px" alt="facebook icon"></a>
-            <a href="https://www.linkedin.com/company/canmar-contracting-limited/" target="_blank" rel="noopener noreferrer"><img src="Images/linkedin-4-512.png" style="height: 61px; width: 61px; padding-left: 10px" alt="linkedin icon"></a>
+
+        <img class="safety-strip" src="Images/Safety/140 Elm Green Chipping.png">  
+           <img class="safety-strip" src="Images/Safety/40 Elm Shoring.png">  
+           <img class="safety-strip" src="Images/Safety/worker.png">  
     
         </div>
 
@@ -225,9 +226,9 @@
 
     <div class="grid-item-4">
         <div class="social-icons">
-        <img src="Images/instagram.webp" alt="Instagram icon">
-        <img src="Images/734399_facebook_media_online_social_icon.png" style="height: 61px; width: 61px; padding-left: 10px" alt="facebook icon">
-        <img src="Images/linkedin-4-512.png" style="height: 61px; width: 61px; padding-left: 10px" alt="linkedin icon">
+            <a href="https://www.instagram.com/canmar_contracting/?igshid=MzRlODBiNWFlZA%3D%3D" target="_blank" rel="noopener noreferrer"><img src="Images/instagram.webp" alt="instagram icon"></a>
+            <a href="https://www.facebook.com/profile.php?id=100093069589695" target="_blank" rel="noopener noreferrer"><img src="Images/734399_facebook_media_online_social_icon.png" style="height: 61px; width: 61px; padding-left: 10px" alt="facebook icon"></a>
+            <a href="https://www.linkedin.com/company/canmar-contracting-limited/" target="_blank" rel="noopener noreferrer"><img src="Images/linkedin-4-512.png" style="height: 61px; width: 61px; padding-left: 10px" alt="linkedin icon"></a>
 
 
     </div>
